Style CSS project RO

--- a/withGraph/BelmanFord/index.html
+++ b/withGraph/BelmanFord/index.html
@@ -22,7 +22,7 @@
         <div class="col s4" id="rightInfo">
             <div class="row">
                 <div class="col s6">
-                    <form action="">
+                    <form>
                         <select name="ford" id="fordSelect" style="display: inline;">
                             <option value="Max">MAX</option>
                             <option value="Min">MIN</option>
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <div class="row">
-                <table id="tableTrace" class="centered highlight" style="color: white;">
-                    <thead class="grey darken-4">
+                <table id="tableTrace" class="centered highlight">
+                    <thead style="color: white; background-color: rgb(24,167,35);">
                         <tr>
                             <th>i</th>
                             <th>j</th>
